# aoc-2024

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  get_inputs  pyproject.toml  readme_stub.md  setup_project  update_aoc
aoc2024/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  utils.py
